Fix backend visuals, add more content

--- a/docs/transpile/custom-backend.ipynb
+++ b/docs/transpile/custom-backend.ipynb
@@ -23,9 +23,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Understanding the `Provider`, `BackendV2`, and `Target` interfaces\n",
+    "## Understanding the Provider, BackendV2, and Target interfaces\n",
     "\n",
-    "Before beginning, it will be helpful to provide some context on the usage and purpose of the `Provider`, `Target`, and `BackendV2` objects.  \n",
+    "Before beginning, it will be helpful to provide some context on the usage and purpose of the [`Provider`](../api/qiskit/providers), [`Target`](../api/qiskit/qiskit.transpiler.Target), and [`BackendV2`](../api/qiskit/qiskit.providers.BackendV2) objects.  \n",
     "\n",
     "- If you have a quantum device or simulator that you would like to integrate into the Qiskit SDK, you will need to write your own `Provider` class. The primary purpose of this class is meant to serve a single purpose: to get backend objects that you provide. This is where any required credential and/or authentication tasks are designed to be handled. Once instantiated, the provider object will then provide a list of backends, and the ability to acquire/instantiate backends.\n",
     "\n",
@@ -42,14 +42,14 @@
    "source": [
     "## Creating a custom `BackendV2`\n",
     "\n",
-    "The `BackendV2` object is an abstract class used for all backend objects created by a provider (either within `qiskit.providers` or another library such as `qiskit_ibm_runtime.IBMBackend`).  These objects contain several attributes, including a [`Target`](/api/qiskit/qiskit.transpiler.Target) which contains information needed by the transpiler and is the main way we will specify the backend's attributes.  This is the primary way a backend's properties which needed by the transpiler -- such as its [`Coupling Map`](/api/qiskit/qiskit.transpiler.CouplingMap), list of [`Instructions`](/api/qiskit/qiskit.circuit.Instruction), etc. -- are defined.  In addition to the `Target`, one can also define pulse level details such as the [`DriveChannel`](/api/qiskit/qiskit.pulse.channels.DriveChannel) or [`ControlChannel`](/api/qiskit/qiskit.pulse.channels.ControlChannel).\n",
+    "The `BackendV2` object is an abstract class used for all backend objects created by a provider (either within `qiskit.providers` or another library such as [`qiskit_ibm_runtime.IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)).  These objects contain several attributes, including a [`Target`](/api/qiskit/qiskit.transpiler.Target) which contains information needed by the transpiler and is the main way we will specify the backend's attributes.  This is the primary way a backend's properties which needed by the transpiler -- such as its [`Coupling Map`](/api/qiskit/qiskit.transpiler.CouplingMap), list of [`Instructions`](/api/qiskit/qiskit.circuit.Instruction), etc. -- are defined.  In addition to the `Target`, one can also define pulse level details such as the [`DriveChannel`](/api/qiskit/qiskit.pulse.channels.DriveChannel) or [`ControlChannel`](/api/qiskit/qiskit.pulse.channels.ControlChannel).\n",
     "\n",
-    "To demonstrate this customization, we will create a simulated multi-chip backend where each chip possesses a heavy-hex connectivity.  We will set the backend's two-qubit gate set to be `CZGates` within each chip and `CXGates` between chips.  We'll start by first creating our own `BackendV2` and customize its `Target` with single and two-qubit gates according to the constraints we just described.\n"
+    "To demonstrate this customization, we will create a simulated multi-chip backend where each chip possesses a heavy-hex connectivity.  We will set the backend's two-qubit gate set to be [`CZGates`](../api/qiskit/qiskit.circuit.library.CZGate) within each chip and [`CXGates`](../api/qiskit/qiskit.circuit.library.ECRGate) between chips.  We'll start by first creating our own `BackendV2` and customize its `Target` with single and two-qubit gates according to the constraints we just described.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     "        self._target.add_instruction(Reset(), measure_props)\n",
     "\n",
     "        self._target.add_instruction(Delay(Parameter(\"t\")), delay_props)\n",
-    "        # Add chip local 2q gate which is cz\n",
+    "        # Add chip local 2q gate which is CZ\n",
     "        cz_props = {}\n",
     "        for i in range(number_of_chips):\n",
     "            for root_edge in self._graph.edge_list():\n",
@@ -128,7 +128,7 @@
     "        self._target.add_instruction(CZGate(), cz_props)\n",
     "\n",
     "        cx_props = {}\n",
-    "        # Add interchip 2q gates which are ecr\n",
+    "        # Add interchip 2q gates which are ecr (effectively CX)\n",
     "        # First determine which nodes to connect\n",
     "        node_indices = self._graph.node_indices()\n",
     "        edge_list = self._graph.edge_list()\n",
@@ -177,15 +177,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With this new class we can then take a look at its connectivity graph using the `plot_gate_map()` method from the `qiskit.visualization` module.  Let's do this for a simple 3-chip backend where each chip is a single heavy-hex connected graph of qubits."
+    "### Visualizing Backends\n",
+    "\n",
+    "With this new class we can then take a look at its connectivity graph using the [`plot_gate_map()`](../api/qiskit/qiskit.visualization.plot_gate_map) method from the `qiskit.visualization` module.  This method, along with [`plot_coupling_map()`](../api/qiskit/qiskit.visualization.plot_coupling_map) and [`plot_circuit_layout()`](../api/qiskit/qiskit.visualization.plot_circuit_layout) are helpful tools for visualizing the qubit arrangement of a backend or how a circuit is laid out across the qubits of a backend.  For this example, we'll create a backend containing 3 small heavy-hex chips and specify a set of coordinates to arrange the qubits and a set of custom colors for the differing two-qubit gates."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "backend = FakeLOCCBackend(3, 3)\n",
+    "\n",
+    "\n",
+    "target = backend.target\n",
+    "coupling_map_backend = target.build_coupling_map()\n",
+    "\n",
+    "\n",
     "coordinates = [(3, 1),\n",
     "               (3, -1),\n",
     "               (2, -2),\n",
@@ -219,11 +228,6 @@
     "for coordinate in coordinates:\n",
     "    total_qubit_coordinates.append((coordinate[0], coordinate[1]+8))\n",
     "\n",
-    "backend = FakeLOCCBackend(3, 3)\n",
-    "\n",
-    "\n",
-    "target = backend.target\n",
-    "coupling_map_backend = target.build_coupling_map()\n",
     "\n",
     "\n",
     "\n",
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +263,7 @@
        "<Figure size 1375.4x823.4 with 1 Axes>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,6 +271,22 @@
    "source": [
     "print(backend.name)\n",
     "plot_gate_map(backend, plot_directed=True, qubit_coordinates=total_qubit_coordinates, line_color=line_colors)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here you can see each qubit is labeled along with colored arrows representing the two-qubit gates.  Gray arrows are the CZ gates and the red arrows are the inter-chip CX gates.  Meanwhile the direction of the arrow indicates the default direction in which these gates are executed (i.e. they specify which qubits are control/targets by default for each two-qubit channel.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating unique backends\n",
+    "\n",
+    "The rustworkx contains a large library of different graphs and enables the creation of custom graphs.  The code below creates a backend inspired by the toric code and is quite interesting to visualize."
    ]
   },
   {
