--- a/docs/transpile/custom-backend.ipynb
+++ b/docs/transpile/custom-backend.ipynb
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creating a custom `BackendV2`\n",
+    "## Creating a custom BackendV2\n",
     "\n",
     "The `BackendV2` object is an abstract class used for all backend objects created by a provider (either within `qiskit.providers` or another library such as [`qiskit_ibm_runtime.IBMBackend`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.IBMBackend)).  These objects contain several attributes, including a [`Target`](/api/qiskit/qiskit.transpiler.Target) which contains information needed by the transpiler and is the main way we will specify the backend's attributes.  This is the primary way a backend's properties which needed by the transpiler -- such as its [`Coupling Map`](/api/qiskit/qiskit.transpiler.CouplingMap), list of [`Instructions`](/api/qiskit/qiskit.circuit.Instruction), etc. -- are defined.  In addition to the `Target`, one can also define pulse level details such as the [`DriveChannel`](/api/qiskit/qiskit.pulse.channels.DriveChannel) or [`ControlChannel`](/api/qiskit/qiskit.pulse.channels.ControlChannel).\n",
     "\n",
