--- a/docs/run/advanced-runtime-options.mdx
+++ b/docs/run/advanced-runtime-options.mdx
@@ -277,8 +277,8 @@ With Estimator V2, you can set resilience levels 0-2 and you can also turn on an
 estimator = Estimator(backend=backend)
 
 estimator.options.resilience_level = 2
-estimator.options.zne_mitigation = True
-estimator.options.zne.noise_factors = [1, 3, 5]
+estimator.options.resilience.zne_mitigation = True
+estimator.options.resilience.zne.noise_factors = [1, 3, 5]
 ```
   </TabItem>
 
