--- a/docs/run/run-jobs-batch.mdx
+++ b/docs/run/run-jobs-batch.mdx
@@ -9,7 +9,8 @@ description: How to run quantum computing jobs in batch mode using Qiskit Runtim
 Batch mode can shorten processing time if all jobs can be provided at the outset. If you want to submit iterative jobs, use [sessions](sessions) instead.  Using batch mode has these benefits:
 
 -  The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially. 
--  There is no delay between jobs, which can help avoid drift.
+-  There is minimal delay between jobs, which can help avoid drift.
+-  You don't get exclusive access to the quantum system.  Therefore, if another user's job is already using the system, your jobs have to wait.  Additionally, system calibration jobs could run between the batched jobs. 
 
 <Admonition type="note">
     When batching, jobs are not guaranteed to run in the order they are submitted.
@@ -27,12 +28,3 @@ with Batch(backend) as batch:
     for obs_set in observable_sets:
         jobs.append(estimator.run(circuits, observables=obs_set))
 ```
-
-For a full example, see the following tutorials:
-
-## Next steps
-
-<Admonition type="tip" title="Recommendations">
-    - Try the [CHSH inequality](https://learning.quantum.ibm.com/tutorial/chsh-inequality) tutorial.
-    - Try the [Grover's algorithm](https://learning.quantum.ibm.com/tutorial/grovers-algorithm) tutorial.
-</Admonition>
