--- a/docs/run/run-jobs-batch.mdx
+++ b/docs/run/run-jobs-batch.mdx
@@ -10,7 +10,7 @@ Batch mode can shorten processing time if all jobs can be provided at the outset
 
 -  The jobs' classical computation, such as compilation, is run in parallel. Thus, running multiple jobs in a batch is significantly faster than running them serially. 
 -  There is minimal delay between jobs, which can help avoid drift.
--  You don't get exclusive access to the quantum system.  Therefore, if another user's job is already using the system, your jobs have to wait.  Additionally, system calibration jobs could run between the batched jobs. 
+-  You don't get exclusive access to the quantum system.  Therefore, if another user's job is already running on the system, your jobs have to wait.  Additionally, system calibration jobs could run between the batched jobs. 
 
 <Admonition type="note">
     When batching, jobs are not guaranteed to run in the order they are submitted.
