--- a/docs/run/run-jobs-batch.mdx
+++ b/docs/run/run-jobs-batch.mdx
@@ -13,7 +13,9 @@ Batch mode can shorten processing time if all jobs can be provided at the outset
     At most five jobs can be processed in parallel, which might include other users' jobs.
     </Admonition>
 -  There is minimal delay between jobs, which can help avoid drift.
--  You don't get exclusive access to the quantum system.  Therefore, if another user's job is already running on the system, your jobs have to wait.  Additionally, system calibration jobs could run between the batched jobs. 
+    <Admonition>
+    You don't get exclusive access to the quantum system.  Therefore, if another user's job is already running on the system, your jobs have to wait.  Additionally, system calibration jobs could run between the batched jobs. 
+    </Admonition>
 
 <Admonition type="note">
     When batching, jobs are not guaranteed to run in the order they are submitted.
