--- a/docs/run/configure-error-mitigation.mdx
+++ b/docs/run/configure-error-mitigation.mdx
@@ -15,7 +15,7 @@ The error mitigation techniques built in to primitives are advanced
 resilience options. To specify these options, use the `resilience_level`
 option when submitting your job.
 
-<admonition type="note">Sampler V2 does not support specifying resilience levels. However, you can turn on or off individual error mitigation / suppression methods. See the [Custom error settings](#advanced-options) section for details.</admonition>
+<admonition type="note">Sampler V2 does not support specifying resilience levels. However, you can turn on or off individual error mitigation / suppression methods. See the [Custom error settings](#advanced-error) section for details.</admonition>
 
 The resilience level specifies how much resilience to build against
 errors. Higher levels generate more accurate results, at the expense of
