--- a/docs/run/circuit-execution.mdx
+++ b/docs/run/circuit-execution.mdx
@@ -4,7 +4,7 @@ description: Explanatory content on fixed and dynamic repetition rate execution
 
 ---
 
-# System circuit execution (test)
+# System circuit execution
 
 ## Fixed repetition rate execution
 
