--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -120,7 +120,7 @@
     "from qiskit.circuit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    "from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService\n",
     "\n",
     "# Bell Circuit\n",
     "qc = QuantumCircuit(2)\n",
