--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -78,7 +78,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c5edb89a-65e6-40fa-a541-bbdcf6cc7043",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "ignore-warnings"
+    ]
+   },
    "outputs": [],
    "source": [
     "from qiskit_aer import AerSimulator\n",
