--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "8eb549ef-ba9c-486e-8b62-e90af6830102",
    "metadata": {},
    "source": [
     "<span id=\"test-locally\"></span>\n",
@@ -10,22 +11,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c0d59170-4f83-4396-9f35-ad78300d6b89",
    "metadata": {},
    "source": [
-    "Local testing mode (available with `qiskit-ibm-runtime` 0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on an IBM Quantum system. \n",
+    "Local testing mode (available with `qiskit-ibm-runtime` 0.22.0 or later) can be used to help develop and test programs before fine-tuning them and sending them to real quantum hardware.  After using local testing mode to verify your program, all you need to change is the backend name to run it on an IBM Quantum system.\n",
     "\n",
-    "To use local testing mode, specify one of the fake backends from ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session. \n",
+    "To use local testing mode, specify one of the fake backends from ``qiskit_ibm_runtime.fake_provider`` or specify a Qiskit Aer backend when instantiating a primitive or a session.\n",
     "\n",
-    "- **Fake backends**: The [fake backends](/api/qiskit-ibm-runtime/fake_provider)  in ``qiskit_ibm_runtime.fake_provider`` mimic the behaviors of IBM Quantum&trade; systems by using system snapshots. The system snapshots contain important information about the quantum system, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the system. The noise model from the snapshot is automatically applied during simulation. \n",
+    "- **Fake backends**: The [fake backends](/api/qiskit-ibm-runtime/fake_provider)  in ``qiskit_ibm_runtime.fake_provider`` mimic the behaviors of IBM Quantum&trade; systems by using system snapshots. The system snapshots contain important information about the quantum system, such as the coupling map, basis gates, and qubit properties, which are useful for testing the transpiler and performing noisy simulations of the system. The noise model from the snapshot is automatically applied during simulation.\n",
     "- **Aer simulator**: Simulators from [Qiskit Aer](simulate-with-qiskit-aer) provide higher-performance simulation that can handle larger circuits and [custom noise models](building_noise_models). It also supports Clifford simulation mode, which can efficiently simulate Clifford circuits with a large number of qubits.\n",
     "\n",
     "\n",
     "\n",
-    "{/* If you currently use the Qiskit SDK, you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](../verify/simulate-with-qiskit-aer) for details. */}\n"
+    "{/* If you currently use the Qiskit SDK, you can use the existing Qiskit Aer primitives for local testing.  See [exact and noisy simulation with Qiskit Aer primitives](../verify/simulate-with-qiskit-aer) for details. */}"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "f03f205c-996f-461c-ac3f-9629689d3cc0",
    "metadata": {},
    "source": [
     "## Fake backends example"
@@ -34,12 +37,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1f3a8ee3-d4a5-4237-a56b-6b50ea061739",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.circuit.library import RealAmplitudes\n",
-    "from qiskit.circuit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.circuit import QuantumCircuit\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "from qiskit_ibm_runtime.fake_provider import FakeManilaV2\n",
@@ -55,7 +57,7 @@
     "pm = generate_preset_pass_manager(backend=fake_manila, optimization_level=1)\n",
     "isa_qc = pm.run(qc)\n",
     "\n",
-    "# You can use a fixed seed to get fixed results. \n",
+    "# You can use a fixed seed to get fixed results.\n",
     "options = {\"simulator\": {\"seed_simulator\": 42}}\n",
     "sampler = Sampler(backend=fake_manila, options=options)\n",
     "\n",
@@ -64,6 +66,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6483a298-211a-4a31-bea2-21670ff408db",
    "metadata": {},
    "source": [
     "## AerSimulator examples\n",
@@ -74,13 +77,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "id": "c5edb89a-65e6-40fa-a541-bbdcf6cc7043",
+   "metadata": {
+    "tags": [
+     "ignore-warnings"
+    ]
+   },
    "outputs": [],
    "source": [
     "from qiskit_aer import AerSimulator\n",
-    "from qiskit.circuit.library import RealAmplitudes\n",
-    "from qiskit.circuit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.circuit import QuantumCircuit\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import Session, SamplerV2 as Sampler\n",
     "\n",
@@ -102,25 +108,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e371b2b0-0f9f-4357-bdbd-7de4a5d77304",
    "metadata": {},
    "source": [
     "To simulate with noise, specify a system (quantum hardware) and submit it to Aer.  Aer builds a noise model based on the calibration data from that system, and instantiates an Aer backend with that model.  If you prefer, you can [build a noise model](/verify/building_noise_models).\n",
     "\n",
-    "Example with noise: "
+    "Example with noise:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5cba81b8-058e-4626-a72b-fad91a00410c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_aer import AerSimulator\n",
-    "from qiskit.circuit.library import RealAmplitudes\n",
-    "from qiskit.circuit import QuantumCircuit, QuantumRegister, ClassicalRegister\n",
-    "from qiskit.quantum_info import SparsePauliOp\n",
+    "from qiskit.circuit import QuantumCircuit\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
+    "from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService\n",
     "\n",
     "# Bell Circuit\n",
     "qc = QuantumCircuit(2)\n",
@@ -143,6 +149,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3647532a-9a58-4931-965d-13794416f9a8",
    "metadata": {},
    "source": [
     "<span id=\"clifford-sim\"></span>\n",
@@ -156,6 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "061dfd9b-766d-4aaf-a3a3-ce6b1c1e7eca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,10 +171,10 @@
     "from qiskit.circuit.library import EfficientSU2\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "\n",
-    "n_qubits = 500  # <---- note this uses 500 qubits! \n",
+    "n_qubits = 500  # <---- note this uses 500 qubits!\n",
     "circuit = EfficientSU2(n_qubits)\n",
     "circuit.measure_all()\n",
-    " \n",
+    "\n",
     "rng = np.random.default_rng(1234)\n",
     "params = rng.choice(\n",
     "    [0, np.pi / 2, np.pi, 3 * np.pi / 2],\n",
@@ -184,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40fe0cb0-74bf-4bf4-afec-a66c7b166b0c",
    "metadata": {},
    "source": [
     "## Next steps\n",
