--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -56,7 +56,7 @@ This guide is for algorithm developers who need to refactor algorithms to use pr
 
 The following topics are use cases with code migration examples:
 
--   [Update parameter values while running](#parm-circ)
+-   [Update parameter values while running](qiskit-runtime-setup#parm-circ)
 -   [Algorithm tuning options (shots, transpilation, error mitigation)](../../run/advanced-runtime-options)
 
 ## FAQs
