--- a/docs/api/migration-guides/qiskit-runtime.mdx
+++ b/docs/api/migration-guides/qiskit-runtime.mdx
@@ -12,7 +12,7 @@ in_page_toc_max_heading_level: 2
 This guide describes key patterns of behavior and use cases with code
 examples to help you migrate code from the legacy `backend.run()` interface (`qiskit-ibmq-provider` package) to use the Qiskit Runtime primitives interface (`qiskit-ibm-runtime` package). 
 
-<Admonition>
+<Admonition type="note">
 Because both `backend.run()` and the "version 1" primitives are being deprecated, this guide uses only the V2 primitives. 
 </Admonition>
 
