Change notebook output to SVG (#830)
The documentation website now supports SVGs in notebook outputs.

Advantages are:
  - Very crisp images: SVG diagrams have basically infinite resolution.
- Faster load times: Looking at `docs/build/circuit-library` (a page
with lots of drawings), the transferred size goes from 220kb -> 70kb
(70%) after switching to SVGs.

--- a/docs/verify/local-testing-mode.ipynb
+++ b/docs/verify/local-testing-mode.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1f3a8ee3-d4a5-4237-a56b-6b50ea061739",
    "metadata": {},
    "outputs": [],
@@ -76,14 +76,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c5edb89a-65e6-40fa-a541-bbdcf6cc7043",
    "metadata": {
     "tags": [
      "ignore-warnings"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/qiskit/.venv/site-packages/qiskit_ibm_runtime/session.py:156: UserWarning: Session is not supported in local testing mode or when using a simulator.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "from qiskit_aer import AerSimulator\n",
     "from qiskit.circuit import QuantumCircuit\n",
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5cba81b8-058e-4626-a72b-fad91a00410c",
    "metadata": {},
    "outputs": [],
@@ -162,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "061dfd9b-766d-4aaf-a3a3-ce6b1c1e7eca",
    "metadata": {},
    "outputs": [],
