Add title and description

--- a/docs/analyze/saving-and-retrieving.ipynb
+++ b/docs/analyze/saving-and-retrieving.ipynb
@@ -246,6 +246,8 @@
   }
  ],
  "metadata": {
+  "title": "Saving circuits and retrieving jobs",
+  "description": "Store Qiskit objects on disk or in the cloud so you can continue where you left off",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
