--- a/docs/analyze/saving-and-retrieving.ipynb
+++ b/docs/analyze/saving-and-retrieving.ipynb
@@ -5,7 +5,7 @@
    "id": "539f98fa-9ccc-472a-99da-ebe6382243dc",
    "metadata": {},
    "source": [
-    "# Saving circuits and retrieving results\n",
+    "# Saving and retrieving Qiskit objects\n",
     "\n",
     "Quantum workflows often take a while to complete so must run over many sessions. Restarting your Python kernel means you'll lose any circuits or results stored in memory. To avoid loss of data, you can save quantum circuits to file and retrieve results of past jobs from IBM Quantum so your next session can continue where you left off.\n",
     "\n",
@@ -106,7 +106,7 @@
    "id": "73f23256-6519-47ae-b9e3-700f52a76711",
    "metadata": {},
    "source": [
-    "## Retrieving past results from IBM Quantum\n",
+    "## Retrieving jobs from IBM Quantum\n",
     "\n",
     "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programatically through its `job_id` method, or you can see all your submitted jobs (and their IDs) at https://quantum.ibm.com/jobs.\n",
     "\n",
@@ -148,14 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "co21d77lmtfr37r4dphg\n"
+      "co22fda1lo04nv57hjig\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/qiskit/.venv/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:878: UserWarning: Cloud simulators will be deprecated on 15 May 2024. Use the new local testing mode in qiskit-ibm-runtime version 0.22.0 or later to meet your debugging needs.\n",
+      "/Users/frankharkins/Documents/documentation/.venv/lib/python3.11/site-packages/qiskit_ibm_runtime/qiskit_runtime_service.py:878: UserWarning: Cloud simulators will be deprecated on 15 May 2024. Use the new local testing mode in qiskit-ibm-runtime version 0.22.0 or later to meet your debugging needs.\n",
       "  warnings.warn(warning_message)\n"
      ]
     }
@@ -218,9 +218,8 @@
     {
      "data": {
       "text/plain": [
-       "[<RuntimeJob('co21d77lmtfr37r4dphg', 'sampler')>,\n",
-       " <RuntimeJob('co20ucmh1p25p1m5ddqg', 'sampler')>,\n",
-       " <RuntimeJob('co20no2n1onu3genm6gg', 'sampler')>]"
+       "[<RuntimeJob('co22fda1lo04nv57hjig', 'sampler')>,\n",
+       " <RuntimeJob('cr222mapcdbg008ttrz0', 'sampler')>]"
       ]
      },
      "execution_count": 8,
@@ -243,10 +242,84 @@
    "source": [
     "You can also select by backend, job state, session, and more. See the [API documentation](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) for more information."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "211b8c15-5aa3-43f6-82ee-2bd1d49ae8fc",
+   "metadata": {},
+   "source": [
+    "## Saving results to disk\n",
+    "\n",
+    "You may also want to save results to disk. You can use Python's built-in Pickle library to do this. Note that `PrimitiveResult` objects from `qiskit-ibm-runtime` are not directly serializable, so you must serialize parts of them individually."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3a3ff817-01c1-47e8-94c6-1ecf2215ef7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"result.pickle\", \"wb\") as file:\n",
+    "    measurements = job.result()[0].data.meas.array\n",
+    "    pickle.dump(measurements, file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a9d8e5-c876-47a7-862e-d2ce535a6052",
+   "metadata": {},
+   "source": [
+    "You can then load this array from disk in a separate kernel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "316aa6f7-faee-4a05-a7b4-02d7bee4d58a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [0]\n",
+      " [3]\n",
+      " [0]\n",
+      " [3]\n",
+      " [3]\n",
+      " [3]\n",
+      " [0]\n",
+      " [0]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"result.pickle\", \"rb\") as file:\n",
+    "    measurements = pickle.load(file)\n",
+    "print(measurements)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "eae94b73-157b-4751-8dd3-add4cc9efec6",
+   "metadata": {
+    "tags": [
+     "remove-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Cleanup the file we created (this cell should be hidden from the user)\n",
+    "pathlib.Path('result.pickle').unlink()"
+   ]
   }
  ],
  "metadata": {
-  "title": "Saving circuits and retrieving jobs",
   "description": "Store Qiskit objects on disk or in the cloud so you can continue where you left off",
   "kernelspec": {
    "display_name": "Python 3",
@@ -264,7 +337,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Saving and retrieving Qiskit objects"
  },
  "nbformat": 4,
  "nbformat_minor": 2
