next chunks of text review

--- a/docs/transpile/custom-backend.ipynb
+++ b/docs/transpile/custom-backend.ipynb
@@ -174,9 +174,9 @@
    "id": "64a418fa-7a7e-4a12-b9c9-ff7377bffed4",
    "metadata": {},
    "source": [
-    "### Visualizing Backends\n",
+    "### Visualize backends\n",
     "\n",
-    "With this new class we can then take a look at its connectivity graph using the [`plot_gate_map()`](../api/qiskit/qiskit.visualization.plot_gate_map) method from the `qiskit.visualization` module.  This method, along with [`plot_coupling_map()`](../api/qiskit/qiskit.visualization.plot_coupling_map) and [`plot_circuit_layout()`](../api/qiskit/qiskit.visualization.plot_circuit_layout) are helpful tools for visualizing the qubit arrangement of a backend or how a circuit is laid out across the qubits of a backend.  For this example, we'll create a backend containing 3 small heavy-hex chips and specify a set of coordinates to arrange the qubits and a set of custom colors for the differing two-qubit gates."
+    "You can view the connectivity graph of this new class with the [`plot_gate_map()`](../api/qiskit/qiskit.visualization.plot_gate_map) method from the `qiskit.visualization` module.  This method, along with [`plot_coupling_map()`](../api/qiskit/qiskit.visualization.plot_coupling_map) and [`plot_circuit_layout()`](../api/qiskit/qiskit.visualization.plot_circuit_layout), are helpful tools for visualizing the qubit arrangement of a backend, as well as how a circuit is laid out across the qubits of a backend.  This example creates a backend containing three small heavy-hex chips. It specifies a set of coordinates to arrange the qubits, as well as a set of custom colors for the differing two-qubit gates."
    ]
   },
   {
@@ -277,7 +277,7 @@
    "id": "d61da191-caa0-4175-a5f4-741b60905cdc",
    "metadata": {},
    "source": [
-    "Here you can see each qubit is labeled along with colored arrows representing the two-qubit gates.  Gray arrows are the CZ gates and the red arrows are the inter-chip CX gates.  Meanwhile the direction of the arrow indicates the default direction in which these gates are executed (i.e. they specify which qubits are control/targets by default for each two-qubit channel.)"
+    "Each qubit is labeled, and colored arrows represent the two-qubit gates.  Gray arrows are the CZ gates and the red arrows are the inter-chip CX gates.  The direction of the arrow indicates the default direction in which these gates are executed; they specify which qubits are control/targets by default for each two-qubit channel."
    ]
   },
   {
@@ -285,9 +285,9 @@
    "id": "59dc66df-5fb8-4844-922c-714fa86f08d5",
    "metadata": {},
    "source": [
-    "## Transpiling against custom backends\n",
+    "## Transpile against custom backends\n",
     "\n",
-    "Now that a custom backend with its own unique [`Target`](../api/qiskit/qiskit.transpiler.Target) has been defined, transpiling quantum circuits against this backend is straightforward.  This is because all the relevant constraints (e.g. basis gates, qubit connectivity, etc.) needed for transpiler passes are contained within this attribute.  As an example, we'll create a circuit which creates a large ghz state and transpile it against the backend constructed above."
+    "Now that a custom backend with its own unique [`Target`](../api/qiskit/qiskit.transpiler.Target) has been defined, it is straightforward to transpile quantum circuits against this backend, since all the relevant constraints (basis gates, qubit connectivity, and so forth) needed for transpiler passes are contained within this attribute. The next example builds a circuit that creates a large GHZ state and transpiles it against the backend constructed above."
    ]
   },
   {
