--- a/docs/analyze/visualize-results.ipynb
+++ b/docs/analyze/visualize-results.ipynb
@@ -18,7 +18,7 @@
     "The `plot_histogram` function visualizes the result of sampling a quantum circuit on a system or simulator.\n",
     "\n",
     "<Admonition title=\"Using the output from functions\" type=\"tip\">\n",
-    "This function returns a `matplotlib.Figure` object. When the last line of a code cell outputs these objects, Jupyter notebooks display them below the cell. If you call these functions in some other environments or in scripts then you will need to explicitly show or save the outputs.\n",
+    "This function returns a `matplotlib.Figure` object. When the last line of a code cell outputs these objects, Jupyter notebooks display them below the cell. If you call these functions in some other environments or in scripts, you will need to explicitly show or save the outputs.\n",
     "\n",
     "Two options are:\n",
     "- Call `.show()` on the returned object to open the image in a new window (assuming your configured matplotlib backend is interactive).\n",
@@ -99,9 +99,9 @@
     "Use the following options for `plot_histogram` to adjust the output graph.\n",
     "\n",
     "* `legend`: Provides a label for the executions. It takes a list of strings used to label each execution's results. This is mostly useful when plotting multiple execution results in the same histogram\n",
-    "* `sort`: Adjusts the order the bars in the histogram are rendered. It can be set to either ascending order with `asc` or descending order with `desc`\n",
+    "* `sort`: Adjusts the order of the bars in the histogram. It can be set to either ascending order with `asc` or descending order with `desc`\n",
     "* `number_to_keep`: Takes an integer for the number of terms to show. The rest are grouped together in a single bar called \"rest\"\n",
-    "* `color`: Adjusts the color of the bars; takes a string or a list of strings for the colors to use for the bars for each execution.\n",
+    "* `color`: Adjusts the color of the bars; takes a string or a list of strings for the colors to use for the bars for each execution\n",
     "* `bar_labels`: Adjusts whether labels are printed above the bars\n",
     "* `figsize`: Takes a tuple of the size in inches to make the output figure"
    ]
