Apply suggestions from code review
Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/analyze/save-and-retrieve.ipynb
+++ b/docs/analyze/save-and-retrieve.ipynb
@@ -7,11 +7,11 @@
    "source": [
     "# Save and retrieve Qiskit objects\n",
     "\n",
-    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any circuits or results stored in memory. To avoid loss of data, you can save quantum circuits to file and retrieve results of past jobs from IBM Quantum so your next session can continue where you left off.\n",
+    "Quantum workflows often take a while to complete and can run over many sessions. Restarting your Python kernel means you'll lose any circuits or results stored in memory. To avoid loss of data, you can save quantum circuits to file and retrieve results of past jobs from IBM Quantum&trade; so your next session can continue where you left off.\n",
     "\n",
     "## Save circuits to file\n",
     "\n",
-    "Use [QPY serialization](/api/qiskit/qpy) to save your circuit to file. QPY files save the full Qiskit circuit object and are forwards-compatible, meaning they'll be understood by newer versions of Qiskit.\n",
+    "Use [QPY serialization](/api/qiskit/qpy) to save your circuit to file. QPY files save the full Qiskit circuit object and are forward-compatible, meaning they'll be compatible with newer versions of Qiskit.\n",
     "\n",
     "To demonstrate, the following cell creates a simple quantum circuit."
    ]
@@ -110,9 +110,9 @@
    "source": [
     "## Retrieve jobs from IBM Quantum\n",
     "\n",
-    "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programatically through its `job_id` method, or you can see all your submitted jobs and their IDs through the [Jobs dashboard](https://quantum.ibm.com/jobs).\n",
+    "IBM Quantum automatically stores results from every job for you to retrieve at a later date. Use this feature to continue quantum programs across kernel restarts and review past results. You can get the ID of a job programmatically through its `job_id` method, or you can see all your submitted jobs and their IDs through the [Jobs dashboard](https://quantum.ibm.com/jobs).\n",
     "\n",
-    "To demonstrate, the following cell sets up our Qiskit Runtime service and selects a backend."
+    "To demonstrate, the following cell sets up the Qiskit Runtime service and selects a backend."
    ]
   },
   {
@@ -174,7 +174,7 @@
    "id": "fb271ce3-3e86-476c-ae4e-66df36ba7406",
    "metadata": {},
    "source": [
-    "Now we have the job's ID, we can retrieve it in a different session or at a later date using the `service.job` method."
+    "Now that you have the job's ID, you can retrieve it in a different session or at a later date using the `service.job` method."
    ]
   },
   {
@@ -204,9 +204,9 @@
    "id": "9aae5f5a-a543-493c-9bc5-5682ba846ab5",
    "metadata": {},
    "source": [
-    "### Programatically find jobs\n",
+    "### Programmatically find jobs\n",
     "\n",
-    "If you don't have a job ID and want to find it programatically rather than visiting the [Jobs dashboard](https://quantum.ibm.com/jobs), you can use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method.\n",
+    "If you don't have a job ID and want to find it programmatically rather than visiting the [Jobs dashboard](https://quantum.ibm.com/jobs), you can use the [`QiskitRuntimeService.jobs`](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs) method.\n",
     "\n",
     "The following cell finds any jobs submitted in the last hour. The `created_after` argument must be a [`datetime.datetime`](https://docs.python.org/3.8/library/datetime.html#datetime.datetime) object."
    ]
@@ -345,7 +345,7 @@
    "pygments_lexer": "ipython3",
    "version": "3"
   },
-  "title": "Saving and retrieving Qiskit objects"
+  "title": "Save and retrieve Qiskit objects"
  },
  "nbformat": 4,
  "nbformat_minor": 2
